@@ -225,8 +225,8 @@ struct
 { W_LONG_UNSUPPORTED, ERROR_LEVEL_WARNING,
    "'%s' 'long' not supported , declared as 'int'." },
 { E_LITERAL_GENERIC, ERROR_LEVEL_ERROR,
-    //"illegal cast of LITERAL value to 'generic' pointer: assuming 'xdata' pointer" },
-    "illegal cast of LITERAL value to 'generic' pointer" },
+   //"illegal cast of LITERAL value to 'generic' pointer: assuming 'xdata' pointer" },
+   "illegal cast of LITERAL value to 'generic' pointer" },
 { E_SFR_ADDR_RANGE, ERROR_LEVEL_ERROR,
    "%s '%s' address out of range" },
 { E_BITVAR_STORAGE, ERROR_LEVEL_ERROR,
@@ -243,8 +243,8 @@ struct
    "no 'return' statement found for function '%s'" },
 { W_PRE_PROC_WARNING, ERROR_LEVEL_WARNING,
    "Pre-Processor %s" },
-{ W_STRUCT_AS_ARG, ERROR_LEVEL_WARNING,
-   "structure '%s' passed as function argument changed to pointer" },
+{ E_STRUCT_AS_ARG, ERROR_LEVEL_ERROR,
+   "SDCC cannot pass structure '%s' as function argument" },
 { E_PREV_DEF_CONFLICT, ERROR_LEVEL_ERROR,
    "conflict with previous definition of '%s' for attribute '%s'" },
 { E_CODE_NO_INIT, ERROR_LEVEL_ERROR,
@@ -334,71 +334,71 @@ struct
 { E_NO_SUCH_BANK, ERROR_LEVEL_ERROR,
    "called function uses unknown register bank %d." },
 { E_TWO_OR_MORE_DATA_TYPES, ERROR_LEVEL_ERROR,
-    "two or more data types in declaration for '%s'" },
+   "two or more data types in declaration for '%s'" },
 { E_LONG_OR_SHORT_INVALID, ERROR_LEVEL_ERROR,
-    "long or short specified for %s '%s'" },
+   "long or short specified for %s '%s'" },
 { E_SIGNED_OR_UNSIGNED_INVALID, ERROR_LEVEL_ERROR,
-    "signed or unsigned specified for %s '%s'" },
+   "signed or unsigned specified for %s '%s'" },
 { E_LONG_AND_SHORT_INVALID, ERROR_LEVEL_ERROR,
-    "both long and short specified for %s '%s'" },
+   "both long and short specified for %s '%s'" },
 { E_SIGNED_AND_UNSIGNED_INVALID, ERROR_LEVEL_ERROR,
-    "both signed and unsigned specified for %s '%s'" },
+   "both signed and unsigned specified for %s '%s'" },
 { E_TWO_OR_MORE_STORAGE_CLASSES, ERROR_LEVEL_ERROR,
-    "two or more storage classes in declaration for '%s'" },
+   "two or more storage classes in declaration for '%s'" },
 { W_EXCESS_INITIALIZERS, ERROR_LEVEL_WARNING,
-    "excess elements in %s initializer after '%s'" },
+   "excess elements in %s initializer after '%s'" },
 { E_ARGUMENT_MISSING, ERROR_LEVEL_ERROR,
    "Option %s requires an argument." },
 { W_STRAY_BACKSLASH, ERROR_LEVEL_WARNING,
-    "stray '\\' at column %d" },
+   "stray '\\' at column %d" },
 { W_NEWLINE_IN_STRING, ERROR_LEVEL_WARNING,
-    "newline in string constant" },
+   "newline in string constant" },
 { E_CANNOT_USE_GENERIC_POINTER, ERROR_LEVEL_ERROR,
-    "cannot use generic pointer %s to initialize %s" },
+   "cannot use generic pointer %s to initialize %s" },
 { W_EXCESS_SHORT_OPTIONS, ERROR_LEVEL_WARNING,
-    "Only one short option can be specified at a time.  Rest of %s ignored." },
+   "Only one short option can be specified at a time.  Rest of %s ignored." },
 { E_VOID_VALUE_USED, ERROR_LEVEL_ERROR,
-    "void value not ignored as it ought to be" },
+   "void value not ignored as it ought to be" },
 { W_INTEGRAL2PTR_NOCAST, ERROR_LEVEL_WARNING,
-    "converting integral to pointer without a cast" },
+   "converting integral to pointer without a cast" },
 { W_PTR2INTEGRAL_NOCAST, ERROR_LEVEL_WARNING,
-    "converting pointer to integral without a cast" },
+   "converting pointer to integral without a cast" },
 { W_SYMBOL_NAME_TOO_LONG, ERROR_LEVEL_WARNING,
-    "symbol name too long, truncated to %d chars" },
-{ W_CAST_STRUCT_PTR,ERROR_LEVEL_WARNING,
-          "cast of struct %s * to struct %s * " },
+   "symbol name too long, truncated to %d chars" },
+{ W_CAST_STRUCT_PTR, ERROR_LEVEL_WARNING,
+   "cast of struct %s * to struct %s * " },
 { W_LIT_OVERFLOW, ERROR_LEVEL_WARNING,
-    "overflow in implicit constant conversion" },
+   "overflow in implicit constant conversion" },
 { E_PARAM_NAME_OMITTED, ERROR_LEVEL_ERROR,
-    "in function %s: name omitted for parameter %d" },
+   "in function %s: name omitted for parameter %d" },
 { W_NO_FILE_ARG_IN_C1, ERROR_LEVEL_WARNING,
-    "only standard input is compiled in c1 mode. file '%s' ignored" },
+   "only standard input is compiled in c1 mode. file '%s' ignored" },
 { E_NEED_OPT_O_IN_C1, ERROR_LEVEL_ERROR,
-    "must specify assembler file name with -o in c1 mode" },
+   "must specify assembler file name with -o in c1 mode" },
 { W_ILLEGAL_OPT_COMBINATION, ERROR_LEVEL_WARNING,
-    "illegal combination of options (--c1mode, -E, -S -c)" },
+   "illegal combination of options (--c1mode, -E, -S -c)" },
 { E_DUPLICATE_MEMBER, ERROR_LEVEL_ERROR,
-    "duplicate %s member '%s'" },
+   "duplicate %s member '%s'" },
 { E_STACK_VIOLATION, ERROR_LEVEL_ERROR,
-    "'%s' internal stack %s" },
+   "'%s' internal stack %s" },
 { W_INT_OVL, ERROR_LEVEL_PEDANTIC,
-    "integer overflow in expression" },
+   "integer overflow in expression" },
 { W_USELESS_DECL, ERROR_LEVEL_WARNING,
-    "useless declaration (possible use of keyword as variable name)" },
+   "useless declaration (possible use of keyword as variable name)" },
 { E_INT_BAD_INTNO, ERROR_LEVEL_ERROR,
-    "interrupt number '%u' is not valid" },
+   "interrupt number '%u' is not valid" },
 { W_BITFLD_NAMED, ERROR_LEVEL_WARNING,
-    "ignoring declarator of 0 length bitfield" },
+   "ignoring declarator of 0 length bitfield" },
 { E_FUNC_ATTR, ERROR_LEVEL_ERROR,
-    "function attribute following non-function declaration"},
+   "function attribute following non-function declaration"},
 { W_SAVE_RESTORE, ERROR_LEVEL_PEDANTIC,
-    "unmatched #pragma save and #pragma restore" },
+   "unmatched #pragma save and #pragma restore" },
 { E_INVALID_CRITICAL, ERROR_LEVEL_ERROR,
-    "not allowed in a critical section" },
+   "not allowed in a critical section" },
 { E_NOT_ALLOWED, ERROR_LEVEL_ERROR,
-    "%s not allowed here" },
+   "%s not allowed here" },
 { E_BAD_TAG, ERROR_LEVEL_ERROR,
-    "'%s' is not a %s tag" },
+   "'%s' is not a %s tag" },
 { E_ENUM_NON_INTEGER, ERROR_LEVEL_ERROR,
    "enumeration constant not an integer" },
 { W_DEPRECATED_PRAGMA, ERROR_LEVEL_WARNING,
